--- a/src/Styles/LogIn.css
+++ b/src/Styles/LogIn.css
@@ -1,11 +1,10 @@
 
 .login {
-    position: absolute;;
-    margin-top: 700px;
-    margin-left: 500px;  
+    position: absolute;
+    margin-top: 200px;
+    margin-left: 600px;
     text-align: center;
     display: flex;
-    align-items: center;
     justify-content: center;
     color: white;
     background-image: linear-gradient(79deg, #7439db, #C66FBC 48%, #F7944D);
@@ -14,6 +13,7 @@
   .auth-form-container, .login-form{
     display: flex;
     flex-direction: column;
+
   }
 @media screen and (min-width: 600px) {
     .auth-form-container {
@@ -26,6 +26,7 @@
 label {
     text-align: left;
     padding: 0.25rem 0;
+
   }
   
   input {
@@ -33,6 +34,7 @@ label {
     padding: 1rem;
     border: none;
     border-radius: 10px;
+
   }
   
   button {
